# Einsum

./: CMakeLists.txt  README.md  einsum.h  einsum.hpp  main.cpp  test.py
